--- a/MvcNoAuthentication/Views/Home/About.cshtml
+++ b/MvcNoAuthentication/Views/Home/About.cshtml
@@ -1,7 +1,17 @@
 ﻿@{
     ViewBag.Title = "About";
 }
+@model IEnumerable<System.Security.Claims.Claim>
+
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+
+<dl>
+    @foreach (var claim in Model)
+    {
+        <dt>@claim.Type</dt>
+        <dd>@claim.Value</dd>
+    }
+</dl>
