--- a/MvcNoAuthentication/Views/Shared/_Layout.cshtml
+++ b/MvcNoAuthentication/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("主页", "Index", "Home")</li>
                     <li>@Html.ActionLink("关于", "About", "Home")</li>
                     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("更新contact", "updatecontact", "Home")</li>
+                    <li>@Html.ActionLink("退出", "logout", "Home")</li>
                 </ul>
             </div>
         </div>
